SystemUI: add Sound tile to QS
Add Sound tile to make user easier to change sound mode
to manner mode.

Original Author: Yoshinori Hirano
Original Commit: af800c4feb909a4447111382f003f44e4c4461d0
Adapted for XenonHD
Change-Id: Ic972621cc9d50f65f909a6f12e63e23f0c3920cb

Reboot/Recovery QS Tile

Change-Id: I2c7956b7201e2103420fc7254051141807024fc4

Conflicts:
	packages/SystemUI/AndroidManifest.xml
Change-Id: I2c7956b7201e2103420fc7254051141807024fc4

Conflicts:
	core/java/com/android/internal/util/cm/QSConstants.java
	packages/SystemUI/src/com/android/systemui/statusbar/phone/QSTileHost.java

--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -160,6 +160,10 @@
     <uses-permission android:name="android.permission.REBOOT" />
     <uses-permission android:name="android.permission.RECOVERY" />
 
+    <!-- Reboot -->
+    <uses-permission android:name="android.permission.REBOOT" />
+    <uses-permission android:name="android.permission.RECOVERY" />
+
     <application
         android:name=".SystemUIApplication"
         android:persistent="true"
